[gd_scene load_steps=7 format=3 uid="uid://dback3wr4uenj"]

[ext_resource type="Script" path="res://entities/raptor/raptor.gd" id="1_0kv3s"]
[ext_resource type="PackedScene" uid="uid://byk8xdsw26qb6" path="res://scenes/animation_manager.tscn" id="1_3lcgo"]
[ext_resource type="PackedScene" uid="uid://bk2ta1wj1xsh7" path="res://scenes/flight_manager.tscn" id="3_8xtnw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_snjd4"]
radius = 700.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ghyjh"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nlpj1"]

[node name="Raptor" type="CharacterBody2D" groups=["killable_by_loop"]]
script = ExtResource("1_0kv3s")

[node name="AnimationManager" parent="." instance=ExtResource("1_3lcgo")]
sprite_name = "falcon"

[node name="DetectionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource("CircleShape2D_snjd4")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_ghyjh")

[node name="FlightManager" parent="." instance=ExtResource("3_8xtnw")]

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nlpj1")

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_body_enters_detection_radius"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
